.provarCaches/00D410000011HE0EAM/objects/rstk__syinstall__c.object
<CustomObject>
    <description>syinstall__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__some_picklist__c</fullName>
        <label>Some Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anu</fullName>
                </value>
                <value>
                    <fullName>Avani</fullName>
                </value>
                <value>
                    <fullName>Kabir</fullName>
                </value>
                <value>
                    <fullName>Samir</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__syinstall_advinvcost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Advanced Cost Accounting / Inv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_arena_account__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ARENA_ACCOUNT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_arena_alert_email__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ARENA_ALERT_EMAIL</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_arena_append_rev__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>arena_append_rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_arena_pwd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ARENA_PWD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_arena_userid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ARENA_USERID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_arenaint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Arena Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_autocadint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Auto CAD Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_converscostqtyopt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Conversion Cost Qty Option</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_dbsyncurl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DBSYNCURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_dflt_run_immediate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Default to Run Immediate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_dfltcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Default Company</label>
        <referenceTo>rstk__sycmp__c</referenceTo>
        <relationshipLabel>Installation Record</relationshipLabel>
        <relationshipName>SYINSTALLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_disassembly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Disassembly / Refurbishing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_divnumbers__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Multi-Division Additions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_eco__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Engineering Change Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_entblkno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ENTBLKNO</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_forecasting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecasting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_int_rpt_email_ui__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Integrity Report Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_int_rpt_user__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Integrity Report User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Installation Record</relationshipLabel>
        <relationshipName>SYINSTALLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_intrdivplng__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inter-Div Planning and Transfers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_intrsiteplng__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inter-Site Planning and Transfers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_lockwaitsecs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>lockwaitsecs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_lstsecaccno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LSTSECACCNO</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_lstusrno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LSTUSRNO</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_maxusercount__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Max User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_mrp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_mrplock__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MRPLOCK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_mrpunlockurl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MRPUNLOCKURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_multicmpind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Multiple Company Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_multidivind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Multiple Division Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_multipodlvry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>multipodlvry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_multisite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Multi-Site Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_ns_acct_id__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Obsolete</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_nsitemlotallowind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_nsitemsrlallowind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_nsrspoprice__c</fullName>
        <label>Use Approved Vendor Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use Rootstock Approved Vendor Price</fullName>
                </value>
                <value>
                    <fullName>Use SF Approved Vendor Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__syinstall_ohdfrngind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Fringe Ohd Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_ohdlabind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Ohd Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_ohdmachind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Machine Ohd Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_ohdmtlind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Material Ohd Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_oneworldint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>One World Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_oploggingactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>OP Logging Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_origrcvdtefld__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Pre-install PO Line Rcv Date Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_origshipdtefld__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Pre-install SO Line Ship Date Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_outsrcdmfg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Outsourced Mfg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_projctl__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_realtimecogs_ui__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Zero-Qty (COGS Ordering)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_reorderfirmurl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>REORDERFIRMURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_rsserver_primary__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>RSSERVER_PRIMARY</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_rsserver_secondary__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>RSSERVER_SECONDARY</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_scheduledatetype_pl__c</fullName>
        <label>Schedule Date Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar, 7-Day</fullName>
                </value>
                <value>
                    <fullName>Shop Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__syinstall_scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Scheduling &amp; Capacity Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_shopfloor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shop Floor Control NEW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_shopflract__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shop Floor Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_solidworksint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Solid Works Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_srv1_wspwd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SRV1_WSPWD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_srv1_wsuserid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SRV1_WSUSERID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_srv2_wspwd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SRV2_WSPWD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_srv2_wsuserid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SRV2_WSUSERID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_staticlistdataurl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>STATICLISTDATAURL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_stdcost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Standard Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_subcontract__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Subcontract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_upditemopt__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Update Item Option</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_useprimary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>USEPRIMARY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_wosoordnumopt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Build On a Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_ws_pwd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ws_pwd</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syinstall_ws_userid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ws_userid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Installation Record</label>
    <listViews>
        <fullName>rstk__RS_Installation_Record</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Installation Record</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installation Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>